string vars align correctly in inv now

--- a/src/less/inventory.less
+++ b/src/less/inventory.less
@@ -17,6 +17,10 @@
   .variable {
     opacity: 0;
     transition: opacity 0.5s 1s ease;
+
+    &.string {
+      margin-top: 19px;
+    }
   }
 
   &.visible {
