--- a/src/less/pillar.less
+++ b/src/less/pillar.less
@@ -58,10 +58,6 @@
       h3 {
         font-size: 18px;
       }
-      &.string {
-        line-height: 28px;
-        padding-left: 6px;
-      }
     }
   }
   .param-container {
@@ -89,8 +85,9 @@
         margin: 0;
         height: 50%;
         width: 100%;
-        line-height: 100%;
         text-align: left;
+        line-height: 28px;
+        padding-left: 6px;
       }
     }
     .parameter {
